# Airflow_learning

./: .gitignore  README.md  pyproject.toml
src/: .airflowignore
src/my_company/dags/: test01.py  test_cbr_to_file.py
src/my_company/tasks/: cbr.py
